--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
 .card {
   width: 480px;
   background: #282824;
-  box-shadow: 0px 4px 8px #ddd;
+  box-shadow: 0px 4px 8px rgba(40, 40, 36, 0.25);
   border-radius: 4px;
   font-family: "Raleway", sans-serif;
   font-weight: lighter;
